# qt5_ui_test

./: CMakeLists.txt  MainForm.ui.qml  main.cpp  main.qml
